--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.21.0",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
@@ -37,6 +38,8 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
+    "multer-storage": "^0.4.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node": "^20.18.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
