--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.21.0",
     "config": "^3.3.12",
@@ -44,6 +46,8 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
